Added links to Index view, created New view

--- a/app/views/ribbons/index.html.erb
+++ b/app/views/ribbons/index.html.erb
@@ -1,7 +1,10 @@
+<%= link_to "Create New Ribbon Record", new_ribbon_path %>
+<br>
+<hr>
+
 <% @ribbons.each do |ribbon| %>
   <%= ribbon.name %>
   <br>
   <%= link_to "View Ribbon", ribbon_path(ribbon) %>
   <hr>
-
 <% end %>
