Refactored New and Edit views as _form partial, changed links in Show view

--- a/app/views/ribbons/index.html.erb
+++ b/app/views/ribbons/index.html.erb
@@ -6,5 +6,7 @@
   <%= ribbon.name %>
   <br>
   <%= link_to "View Ribbon", ribbon_path(ribbon) %>
+  <br>
+  <%= link_to "Edit Ribbon", edit_ribbon_path %>
   <hr>
 <% end %>
