--- a/app/views/ribbons/show.html.erb
+++ b/app/views/ribbons/show.html.erb
@@ -6,4 +6,4 @@ Material: <%= @ribbon.material %>
 <br>
 <%= link_to "Back", ribbons_path %>
 <br>
-<%= link_to "Edit Ribbon" %>
+<%= link_to "Edit Ribbon", edit_ribbon_path %>
