--- a/app/views/ribbons/new.html.erb
+++ b/app/views/ribbons/new.html.erb
@@ -1,16 +1,3 @@
-<%= form_for @ribbon do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <br>
-  <%= f.label :color %>
-  <%= f.text_field :color %>
-  <br>
-  <%= f.label :material %>
-  <%= f.text_field :material %>
-  <br>
-  <%= f.submit %>
-<% end %>
+<%= render "form" %>
 
 <%= link_to "Back", ribbons_path %>
-<br>
-<%=  %>
