Added Delete links, created delete action in controller

--- a/app/views/ribbons/edit.html.erb
+++ b/app/views/ribbons/edit.html.erb
@@ -1,1 +1,5 @@
 <%= render "form" %>
+<br>
+<%= link_to "Back", ribbons_path %>
+<br>
+<%= link_to "Delete Ribbon", ribbon_path, method: "delete" %>
