--- a/app/views/ribbons/index.html.erb
+++ b/app/views/ribbons/index.html.erb
@@ -7,6 +7,6 @@
   <br>
   <%= link_to "View Ribbon", ribbon_path(ribbon) %>
   <br>
-  <%= link_to "Edit Ribbon", edit_ribbon_path %>
+  <%= link_to "Edit Ribbon", edit_ribbon_path(ribbon) %>
   <hr>
 <% end %>
